--- a/20125164_韩浩杰_源代码_实验5_疫情微博情绪分类.ipynb
+++ b/20125164_韩浩杰_源代码_实验5_疫情微博情绪分类.ipynb
@@ -350,7 +350,7 @@
     "for epoch in range(num_epochs):\n",
     "    train_acc = train_epoch(net, train_iter, optimizer, criterion)\n",
     "    valid_acc = test_epoch(net, valid_iter, criterion)\n",
-    "    print(\"epoch={}, train acc={}, valid acc={}\".format(epoch+1, train_acc, valid_acc))\n",
+    "    print(\"epoch {}, train acc={}, valid acc={}\".format(epoch+1, train_acc, valid_acc))\n",
     "\n",
     "    train_acc_list.append(train_acc)\n",
     "    valid_acc_list.append(valid_acc)"
