--- a/20125164_韩浩杰_源代码_实验5_疫情微博情绪分类.ipynb
+++ b/20125164_韩浩杰_源代码_实验5_疫情微博情绪分类.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "source": [
-    "## 4 绘制图像"
+    "## 4 结果展示"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -402,11 +402,39 @@
     }
    ],
    "source": [
+    "# 绘制图像\n",
     "plt.plot(train_acc_list)\n",
     "plt.plot(valid_acc_list)\n",
     "plt.ylim(ymin=0.5, ymax=1.01)\n",
     "plt.title(\"The accuracy of TextCNN\")\n",
     "plt.legend([\"train\", \"test\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "true label: happy, pred label: happy\ntrue label: neural, pred label: neural\ntrue label: angry, pred label: angry\ntrue label: neural, pred label: neural\ntrue label: angry, pred label: angry\ntrue label: fear, pred label: sad\ntrue label: neural, pred label: neural\ntrue label: happy, pred label: happy\ntrue label: angry, pred label: neural\ntrue label: fear, pred label: fear\n"
+    }
+   ],
+   "source": [
+    "# 预测结果\n",
+    "def get_labels(labels):\n",
+    "    text_labels = ['neural', 'happy', 'angry', 'sad', 'fear', 'surprise']\n",
+    "    return [text_labels[int(i)] for i in labels]\n",
+    "\n",
+    "X, y = next(iter(valid_iter))\n",
+    "true_labels = get_labels(y.cpu().numpy())\n",
+    "pred_labels = get_labels(net(X).argmax(dim=1).cpu().numpy())\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print('true label: %s, pred label: %s' % (true_labels[i], pred_labels[i]))"
    ]
   }
  ]
